--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-rZtnXU83Dn mbr-parallax-background" id="header1-2">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header1 cid-rZtnXU83Dn mbr-parallax-background" id="header1-2">
 
     
 
